--- a/public/style/riwayat.css
+++ b/public/style/riwayat.css
@@ -136,7 +136,7 @@ a {
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: #ccc;
+    background-color: #F5F5F5;
     -webkit-transition: .4s;
     transition: .4s;
 }
@@ -148,17 +148,17 @@ a {
     width: 26px;
     left: 4px;
     bottom: 4px;
-    background-color: white;
+    background-color: black;
     -webkit-transition: .4s;
     transition: .4s;
 }
 
 input:checked+.slider {
-    background-color: #2196F3;
+    background-color: #0B56A7;
 }
 
 input:focus+.slider {
-    box-shadow: 0 0 1px #2196F3;
+    box-shadow: 0 0 1px #0B56A7;
 }
 
 input:checked+.slider:before {
